display user input with user name in list group added

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,3 +15,9 @@ $primary-color: #5b5b5b;
   font-size: 24px;
 }
 
+.list-group{
+    max-height: 300px;
+    margin-bottom: 10px;
+    overflow:scroll;
+    -webkit-overflow-scrolling: touch;
+}
